@@ -1,5 +1,7 @@
 Date	Added
 
+2007/07/18
+	* Added delay_dependon_agi, both options are available now [ultramage]
 2007/06/10
 	* Rev. 10744 Fixed nopvp mapflag entry for mosk_in. [L0ne_W0lf]
 2007/06/08
